Create basic form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<title>List App</title>
 </head>
 <body>
-
+	<div class="container">
+		<form class="form">
+			<label for="input">Add item to the list:</label>
+			<input type="text" id="input" name="input">
+			<button>Add Item</button>
+		</form>
+	</div>
 </body>
 </html>
