--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 			<input type="text" id="input" name="input">
 			<button>Add Item</button>
 		</form>
+
+		<ul class="list">
+		</ul>
 	</div>
 </body>
 </html>
