--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<div class="container">
-		<form class="form">
+		<div class="form">
 			<label for="input">Add item to the list:</label>
 			<input type="text" id="input" name="input">
 			<button>Add Item</button>
-		</form>
+		</div>
 
 		<ul class="list">
 		</ul>
