add title to html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="container">
+		<h1 class="title">The List App</h1>
 		<div class="form">
 			<label for="input">Add item to the list:</label>
 			<input type="text" id="input" name="input">
