Style the page and add classes to buttons

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="script.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<title>List App</title>
 </head>
 <body>
 	<div class="container">
 		<h1 class="title">The List App</h1>
 		<div class="form">
-			<label for="input">Add item to the list:</label>
 			<input type="text" id="input" name="input">
-			<button>Add Item</button>
+			<button class="btn add">Add Item</button>
 		</div>
 
 		<ul class="list">
 		</ul>
-	</div>
+	</div>	
+	<div class="footer">Made with ❤️ by <a href="#">@dejanpls</a></div>
+	
 </body>
 </html>
