Update footer link to github profile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</ul>
 	</div>	
 	
-	<div class="footer">Made with ❤️ by <a href="#">@dejanpls</a></div>
+	<div class="footer">Made with ❤️ by @<a href="https://github.com/dejanpls">dejanpls</a></div>
 	
 </body>
 </html>
