Limit the number of input characters to 20

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<button class="btn filterClose">❌</button>
 		</div>
 		<div class="form">
-			<input type="text" id="input" name="input" placeholder="Add new items">
+			<input type="text" id="input" name="input" maxlength="20" placeholder="Add new items">
 			<button class="btn add">Add Item</button>
 			<button class="btn filterOpen">🔍</button>
 		</div>
