--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="script.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -20,6 +19,7 @@
 		</div>
 		<div class="form">
 			<input type="text" id="input" name="input" maxlength="20" placeholder="Add new items">
+			<!-- enter code to handle the item amount here -->
 			<button class="btn add">Add Item</button>
 			<button class="btn filterOpen">🔍</button>
 		</div>
@@ -27,6 +27,16 @@
 		<ul class="list">
 		</ul>
 	</div>	
+	<div class="blurred">
+		<div class="popup">
+			<p class="question"></p>
+			<div class="btnContainer">
+				<button class="btn confirm">Confirm</button>
+				<button class="btn cancel">Cancel</button>
+			</div>
+		</div>
+	</div>
+
 	
 	<div class="footer">Made with ❤️ by @<a href="https://github.com/dejanpls">dejanpls</a></div>
 	
