Feature: Enable user to input amount of pcs for certain list item
	What was done:
		- Add new input element to form section and style it
		- Include several default datalist options (e.g 1, 2, 3, 4, 5)
		- Make sure the items do not overflow over the 350px max-width
		- Set default value to 1
		- Enable user confirmation by pressing the enter key
		- Show the amount in the list item

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="form">
 			<input type="text" id="input" name="input" maxlength="20" placeholder="Add new items">
 			<!-- enter code to handle the item amount here -->
-			<input type="text" id="itemAmount" maxlength="2" list="amount" />
+			<input type="text" id="itemAmount" maxlength="2" list="amount" value="1" />
 			<datalist id="amount">
 			 	<option>1</option>
 			  	<option>2</option>
